# domain-scanner

./: .gitignore  DESIGN.md  README.md  deploy.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: batch_cmds.rs  export_cmds.rs  filter_cmds.rs  gpu_cmds.rs  llm_cmds.rs  log_cmds.rs  mod.rs  proxy_cmds.rs  scan_cmds.rs  task_cmds.rs  vector_cmds.rs  worker_cmds.rs
src-tauri/src/db/: batch_repo.rs  cluster_worker_repo.rs  filter_repo.rs  gpu_repo.rs  init.rs  llm_repo.rs  log_repo.rs  mod.rs  proxy_repo.rs  scan_batch_repo.rs  scan_item_repo.rs  task_repo.rs  task_run_repo.rs  vector_repo.rs  vectorize_run_repo.rs
src-tauri/src/embedding/: gpu_detector.rs  local_model.rs  mod.rs  remote_api.rs
src-tauri/src/export/: exporter.rs
src-tauri/src/llm/: client.rs  mod.rs  prompts.rs  providers.rs
src-tauri/src/models/: cluster_worker.rs  gpu.rs  llm.rs  mod.rs  proxy.rs  scan_batch.rs  scan_item.rs  task.rs
src-tauri/src/proxy/: manager.rs
src-tauri/src/scanner/: batch.rs  batch_coordinator.rs  batch_executor.rs  batch_planner.rs  domain_checker.rs  engine.rs  list_generator.rs  local_worker.rs  mod.rs  remote_worker.rs  signature.rs  task_runner.rs  tld_manager.rs
src-tauri/tests/: export_integration.rs  integration_tests.rs  scanner_integration.rs  task_lifecycle.rs
(+60 files in other folders)
