[package]
name = "domain-scanner-app"
version = "0.1.0"
description = "Domain Scanner Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "domain_scanner_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "socks"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
hickory-resolver = "0.24"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# ONNX Runtime (optional, conditionally compiled)
ort = { version = "2.0.0-rc.12", optional = true }

[features]
default = []
gpu-cuda = ["ort/cuda"]
gpu-directml = ["ort/directml"]
gpu-rocm = ["ort/rocm"]
gpu-coreml = ["ort/coreml"]
gpu-auto = []

[dev-dependencies]
tempfile = "3"
mockito = "1"
tokio-test = "0.4"
